--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
 
 
   <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
     <aws.java.sdk.version>2.20.20</aws.java.sdk.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -23,6 +23,7 @@
           <target>11</target>
         </configuration>
       </plugin>
+      
       
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -62,6 +63,39 @@
   </repositories>
 
   <dependencies>
+ <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>okhttp</artifactId>
+        <version>5.0.0-alpha.11</version>
+    </dependency>
+<dependency>
+  <groupId>com.twilio.sdk</groupId>
+  <artifactId>twilio</artifactId>
+  <version>9.7.0</version>
+  <scope>system</scope>
+  <systemPath>${project.basedir}/lib/twilio-9.7.0.jar</systemPath>
+
+</dependency>
+     
+
+<dependency>
+  <groupId>com.google.cloud</groupId>
+  <artifactId>google-cloud-storage</artifactId>
+  <version>1.118.0</version>
+</dependency>
+    <!-- Firebase SDK -->
+    <dependency>
+        <groupId>com.google.firebase</groupId>
+        <artifactId>firebase-admin</artifactId>
+        <version>8.0.0</version>
+    </dependency>
+    
+    <!-- Google OAuth2 -->
+    <dependency>
+        <groupId>com.google.auth</groupId>
+        <artifactId>google-auth-library-oauth2-http</artifactId>
+        <version>0.22.0</version>
+    </dependency>
 
   
 <dependency>
@@ -98,6 +132,14 @@
               <version>5.2</version>
               </dependency>
 
+    <!-- Other dependencies... -->
+
+    <!-- WebSocket Client -->
+    <dependency>
+        <groupId>org.java-websocket</groupId>
+        <artifactId>Java-WebSocket</artifactId>
+        <version>1.5.1</version>
+    </dependency>
 
  
 
