--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,7 @@
           <target>11</target>
         </configuration>
       </plugin>
-      
-      
+    
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
@@ -63,6 +62,19 @@
   </repositories>
 
   <dependencies>
+
+      <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-firestore-bom</artifactId>
+        <version>3.14.3</version>
+        <type>pom</type>
+      </dependency>
+<!-- https://mavenlibs.com/maven/dependency/com.google.api/gax -->
+<dependency>
+  <groupId>com.google.api</groupId>
+  <artifactId>gax</artifactId>
+  <version>2.32.0</version>
+</dependency>
  <dependency>
         <groupId>com.squareup.okhttp3</groupId>
         <artifactId>okhttp</artifactId>
