--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,8 @@
           <target>11</target>
         </configuration>
       </plugin>
-    
+      
+      
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
@@ -62,19 +63,6 @@
   </repositories>
 
   <dependencies>
-
-      <dependency>
-        <groupId>com.google.cloud</groupId>
-        <artifactId>google-cloud-firestore-bom</artifactId>
-        <version>3.14.3</version>
-        <type>pom</type>
-      </dependency>
-<!-- https://mavenlibs.com/maven/dependency/com.google.api/gax -->
-<dependency>
-  <groupId>com.google.api</groupId>
-  <artifactId>gax</artifactId>
-  <version>2.32.0</version>
-</dependency>
  <dependency>
         <groupId>com.squareup.okhttp3</groupId>
         <artifactId>okhttp</artifactId>
@@ -109,7 +97,13 @@
         <version>0.22.0</version>
     </dependency>
 
-  
+    <dependency>
+      <groupId>com.google.api</groupId>
+      <artifactId>gax-grpc</artifactId>
+      <version>2.33.0</version>
+    </dependency>
+    <!-- Thanks for using https://jar-download.com -->
+    
 <dependency>
     <groupId>net.andrewcpu.elevenlabs</groupId>
     <artifactId>elevenlabs-api</artifactId>
@@ -118,24 +112,11 @@
     <systemPath>${project.basedir}/lib/elevenlabs-api-11.jar</systemPath>
 </dependency>
 
-    <dependency>
-        <groupId>com.squareup.okhttp3</groupId>
-        <artifactId>okhttp</artifactId>
-        <version>4.9.1</version>
-    </dependency>
-
       <dependency>
     <groupId>com.sparkjava</groupId>
     <artifactId>spark-core</artifactId>
     <version>2.9.3</version> <!-- Replace with the desired version -->
 </dependency>
-
-<dependency>
-    <groupId>org.java-websocket</groupId>
-    <artifactId>Java-WebSocket</artifactId>
-    <version>1.5.1</version> <!-- Check for latest version -->
-</dependency>
-
 
 <!-- Apache HttpClient -->
     <dependency>
@@ -148,17 +129,6 @@
         <groupId>org.json</groupId>
         <artifactId>json</artifactId>
         <version>20230227</version>
-    </dependency>
-    
-        <dependency>
-        <groupId>org.eclipse.jetty.websocket</groupId>
-        <artifactId>websocket-client</artifactId>
-        <version>9.4.43.v20210629</version>
-    </dependency>
-    <dependency>
-        <groupId>org.eclipse.jetty.websocket</groupId>
-        <artifactId>javax-websocket-client-impl</artifactId>
-        <version>9.4.43.v20210629</version>
     </dependency>
     
 
