--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,12 @@
   <systemPath>${project.basedir}/lib/twilio-9.7.0.jar</systemPath>
 
 </dependency>
-     
+     <dependency>
+    <groupId>com.google.cloud</groupId>
+    <artifactId>google-cloud-secretmanager</artifactId>
+    <version>2.24.0</version>
+</dependency>
+
 
 <dependency>
   <groupId>com.google.cloud</groupId>
